src/containers/TodayMood/TodayMood.css
/*COMPONENT STYLES*/
.today-mood {
  align-items: center;
  display: flex;
  flex-direction: column;
  height: 100vh;
  margin: 0;
}

.analytical-bg {
  background: rgba(129,220,176, 0.62);
}

.joy-bg {
  background: rgba(227,186,86, 0.8);
}

.fear-bg {
  background: rgba(237,158,90, 0.8);
}

.confident-bg {
  background: rgba(98,74,121, 0.8);
}

.tentative-bg {
  background: rgba(235,123,162, 0.8);
}

.anger-bg {
  background: rgba(221,134,134, 0.9);
}

.sadness-bg {
  background: rgba(106,164,203, 0.9);
}

/*TITLE*/
.today-title {
  font-size: 2rem;
}

/*TODAY'S TONE*/
.tone-word {
  font-weight: bold;
  font-size: 54px;
  margin-top: 0;
}

.analytical {
  color: #4BCE8F;
  text-shadow: 0px 4px 4px rgba(84, 84, 84, 0.8);
}

.joy {
  color: #e0b344;
  text-shadow: 0px 4px 4px rgba(42, 42, 42, 0.8);
}

.fear {
  color: #e98632;
  text-shadow: 0px 4px 4px rgba(42, 42, 42, 0.8);
}

.confident {
  color: #3b1e58;
  text-shadow: 0px 2px 2px rgba(255, 255, 255, 0.3);
}

.tentative {
  color: #E02F6D;
  text-shadow: 0px 4px 4px rgba(42, 42, 42, 0.8);
}

.anger {
  color: #C73636;
  text-shadow: 0px 2px 2px rgba(255, 255, 255, 0.4);
}

.sadness {
  color: #2b7db5;
  text-shadow: 0px 4px 4px rgba(42, 42, 42, 0.8);
}

/*MESSAGE*/
.message {
  font-size: 2rem;
  width: 80%;
}

.quote {
  font-size: 1.5rem;
  margin: 0 15px;
}

/*BUTTONS*/
.today-btns-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: 2rem;
  width: 55%;
}

.yes-no-btns {
  width: 5rem;
}

.go-home-btn {
  height: 3rem;
  line-height: 1rem;
  margin-top: 2rem;
}

